# cgenarris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  __init__.py
src/: LICENSE.txt  algebra.c  algebra.h  cgenarris_mpi.c  cgenarris_mpi.h  check_structure.c  check_structure.h  check_structure_layer_group.c  check_structure_layer_group.h  combinatorics.c  combinatorics.h  crystal.h  crystal_utils.c  crystal_utils.h  input_settings.h  lattice_generator.c  lattice_generator.h  lattice_generator_layer.c  lattice_generator_layer.h  layer_group_operation_database.h  layer_group_position_database.h  molecule.h  molecule_placement.c  molecule_placement.h  molecule_utils.c  molecule_utils.h  point_group.h  pygenarris.c  pygenarris.h  pygenarris.i  pygenarris_mpi.c  pygenarris_mpi.h  pygenarris_mpi.i  pygenarris_mpi_utils.c  pygenarris_mpi_utils.h  randomgen.c  randomgen.h  read_input.c  read_input.h  setup_mpi.py  (+3 more)
src/rpack/: LICENSE  README.md  setup.py
src/rpack/rigid_press/: __init__.py  ase_interface.py  d_algebra.c  d_algebra.h  rigid_press.c  rigid_press.h  rigid_press.i  symm.c  symmetrization.c  symmetrization.h
src/spglib_src/: tetrahedron_method.c
test/regression_test1/: control.in  control_new.in  geometry.in  geometry.out.test
